css/style.css
/* ... */
@-ms-viewport {
  width: device-width;
}

body {
  font-size: var(--font-s);
  font-weight: 400;
  color: var(--theme-black);
  background-color: var(--theme-white);
  margin: 0;
  overflow-x: hidden;
}

a {
  color: var(--brand-color);
  text-decoration: none;
  cursor: pointer;
}

p {
  line-height: 1.5;
  margin-bottom: 1.5rem;
}

p.copyright {
  font-size: var(--font-xs);
  color: var(--theme-body);
}

hr.spacer, 
.single-custom-story .wp-block-separator{
  display: flex;
  height: 1px;
  background: var(--theme-secondary-alpha) !important;
  width: 100%;
  margin: var(--spacing-13) 0;
  border: none;
}

.dark-mode hr.spacer, 
.dark-mode .single-custom-story .wp-block-separator{
  background: var(--theme-accent) !important;
}

ul.no-bullets {
  list-style: none;
}

ul.no-bullets li {
  margin-bottom: var(--spacing-4);
}

ul.no-bullets li a {
  text-decoration: none;
  color: var(--theme-body);
}

ul.no-bullets li.active a {
  color: var(--brand-color) !important;
  font-weight: 600;
}

.full-width {
  width: 100%;
}

.full-height {
  height: 100%;
}

img.full-height {
  height: 100% !important;
  width: 100% !important;
  object-fit: cover;
}

img.rounded {
  border-radius: var(--rounded);
}

.rounded-top {
  border-radius: var(--rounded) var(--rounded) 0 0 !important;
}

.rounded-bottom {
  border-radius: 0 0 var(--rounded) var(--rounded) !important;
}

.headline,
.headline h1,
.headline h2,
.headline h3,
.headline h4,
.single h1,
.single h2,
.single h3,
.single h4,
h1,
h2,
h3,
h4 {
  font-family: "Lora";
  font-weight: 400;
}

.headline,
.headline h1,
.headline h2,
.headline h3,
.headline h4 {
  margin: 0;
}

.single h3 {
  font-size: var(--font-m);
  line-height: 2;
}

.headline h5 {
  font-family: "Open Sans";
  font-size: var(--font-xs);
  font-weight: 400;
  color: var(--theme-white);
}

/* Texts */
.text--theme-white {
  color: var(--theme-white);
}

.text--theme-accent {
  color: var(--theme-accent);
}

.text-center {
  text-align: center;
}

.text-right {
  text-align: right;
}

.text-left {
  text-align: left;
}

/* Content alignment */
.align-left {
  align-items: flex-start !important;
}

.align-right {
  align-items: flex-end !important;
}

.align-center {
  align-items: center !important;
}

/* Line heights */
.lh--normal {
  line-height: var(--line-height-normal);
}

.lh--tight {
  line-height: var(--line-height-tight);
}

.lh--tightest {
  line-height: var(--line-height-tightest);
}

/* Gaps */
.gap--4 {
  gap: 4px;
}
.gap--8 {
  gap: 8px;
}
.gap--16 {
  gap: 16px;
}
.gap--20 {
  gap: 20px;
}
.gap--32 {
  gap: 32px;
}
.gap--40 {
  /* gap: 40px; */
  gap: clamp(20px, 5vw + 1px, 40px);
}

.gap--80 {
  /* gap: 80px; */
  gap: clamp(20px, 5vw + 1px, 80px);
}

/* Backgrounds */
.bg-theme-secondary {
  background: var(--theme-secondary);
  color: var(--theme-white) !important;
}

.bg-theme-secondary-alpha {
  background: var(--theme-secondary-alpha);
}

.bg-theme-accent {
  background: var(--theme-accent);
}

.bg-theme-gray {
  background: var(--theme-soft-gray);
}

.bg-brand-color {
  background: var(--brand-color);
  color: var(--theme-white) !important;
}

/* Flex direction and distribution */
.in-column {
  display: flex;
  flex-direction: column;
}

.in-row {
  display: flex;
  flex-direction: row;
}

.space-between {
  justify-content: space-between;
}

.align-center {
  align-items: center;
}

/* Paddings */
.pv--8 {
  padding-top: 8px;
  padding-bottom: 8px;
}
.pv--16 {
  padding-top: clamp(10px, 2vw + 1px, 16px);
  padding-bottom: clamp(10px, 2vw + 1px, 16px);
}
.pv--20 {
  padding-top: 20px;
  padding-bottom: 20px;
}
.pv--24 {
  padding-top: 24px;
  padding-bottom: 24px;
}
.pv--30 {
  padding-top: 30px;
  padding-bottom: 30px;
}
.pv--40 {
  /* padding-top: 40px; */
  padding-top: clamp(20px, 5vw + 1px, 40px);
  /* padding-bottom: 40px; */
  padding-bottom: clamp(20px, 5vw + 1px, 40px);
}
.pv--56 {
  padding-top: 56px;
  padding-bottom: 56px;
}
.pv--80 {
  padding-top: clamp(40px, 5vw + 1px, 80px);
  padding-bottom: clamp(40px, 5vw + 1px, 80px);
}
.ph--8 {
  padding-left: 8px;
  padding-right: 8px;
}
.ph--16 {
  padding-left: 16px;
  padding-right: 16px;
}
.ph--20 {
  padding-left: 20px;
  padding-right: 20px;
}
.ph--40 {
  /* padding-left: 40px; */
  padding-left: clamp(20px, 5vw + 1px, 40px);
  /* padding-right: 40px; */
  padding-right: clamp(20px, 5vw + 1px, 40px);
}
.ph--56 {
  padding-left: 56px;
  padding-right: 56px;
}

.ph--80 {
  padding-left: clamp(40px, 5vw + 1px, 80px);
  padding-right: clamp(40px, 5vw + 1px, 80px);
}

/* Columns */
.column--20,
.column--30,
.column--40,
.column--50,
.column--60,
.column--70,
.column--80,
.column--100 {
  display: flex;
  flex-direction: column;
}

.column--20 {
  width: 20%;
}

.column--40 {
  width: 40%;
}

.column--30 {
  width: 30%;
}

.column--50 {
  width: 50%;
}

.column--60 {
  width: 60%;
}

.column--70 {
  width: 70%;
}

.column--80 {
  width: 80%;
}

.column--100 {
  width: 100%;
}

.grid--2 {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

.grid--3 {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
}

.grid--4 {
  display: grid !important;
  grid-template-columns: 1fr 1fr 1fr 1fr;
}

.grid--5 {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
}

.grid--4.repeat {
  grid-template-columns: repeat(4, 1fr);
  display: inline-grid;
}

/* Modifiers */
.hidden {
  display: none !important;
}

.no-scroll {
  overflow: hidden;
}

.is-position-sticky {
  position: sticky;
  position: -webkit-sticky;
}

@keyframes move-up {
  0% {
    transform: translateY(0);
  }

  100% {
    transform: translateY(-50px);
  }
}

/* Dark Theme */
.dark-mode {
  --theme-secondary: #cbefb6;
  --theme-accent: #0f362e;
  --theme-body: var(--theme-white);
}

.donate {
  background: var(--theme-secondary);
  color: var(--theme-white);
}

body.dark-mode {
  background: var(--theme-black);
  color: var(--theme-white);
}
.dark-mode .donate {
  background: var(--theme-secondary);
  color: var(--theme-black);
}
/* ... */

